# OrientAPI

./: .gitignore  README.md  _config.yml  index.md
.github/workflows/: ci.yml  pages.yml
app/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py  services.py
app/tests/: test_auth.py  test_services.py
docs/: 01-cahier-des-charges.md  02-post-mortem-incident.md  03-revue-architecture-presta.md
infra/kubernetes/argo-apps/: app-postgres.yaml  app-prometheus.yaml  grafana.yaml  kube-prometheus-stack.yaml  loki.yaml  network-policies.yaml  orientapi.yaml  postgres.yaml  prometheus.yaml
infra/kubernetes/base/network-policies/: allow-dns-egress.yaml  allow-ingress-to-orientapi.yaml  allow-orientapi-egress-to-postgres.yaml  allow-orientapi-to-postgres.yaml  allow-prometheus-scraping.yaml  default-deny-all.yaml
infra/kubernetes/base/observability/: grafana-values.yaml  kube-prometheus-stack-values.yaml  loki-values.yaml  prometheus-values.yaml
infra/kubernetes/base/orientapi/: configmap.yaml  deployment.yaml  ingress.yaml  metrics-nodeport.yaml  secret-jwt.yaml  service.yaml
infra/monitoring/: docker-compose.yml  prometheus.yml
infra/monitoring/dashboards/: api-health.json  host-health.json
infra/postgres/: docker-compose.yml
infra/terraform/: cloud-init-app.yaml.tftpl  cloud-init-monitoring.yaml.tftpl  cloud-init.yaml  compute.tf  main.tf  network.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
tests/k6/: incident-demo.js  parcoursup-spike.js
(+6 files in other folders)
